# python-netdata

./: LICENSE  README.rst  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  testing.yml
netdata/: __init__.py  exceptions.py
netdata/tests/: test_chart.py
tests/: __init__.py  test_chart.py  test_connection.py  test_info.py
