[tool.poetry]
name = "netdata"
version = "1.0.3"
description = "Python API for interacting with Netdata"
authors = ["Fabian Affolter <mail@fabian-affolter.ch>"]
license = "MIT"
homepage = "https://github.com/home-assistant-ecosystem/python-netdata"
repository = "https://github.com/home-assistant-ecosystem/python-netdata"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Home Automation"
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23,<1"
yarl = "^1.7.0"

[tool.poetry.dev-dependencies]
black = "^22.8"
pytest = "^6.2.5"
pytest-httpx = ">0.15,<1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
