[tool.poetry]
name = "netdata"
version = "1.2.0"
description = "Python API for interacting with Netdata"
authors = ["Fabian Affolter <mail@fabian-affolter.ch>"]
license = "MIT"
homepage = "https://github.com/home-assistant-ecosystem/python-netdata"
repository = "https://github.com/home-assistant-ecosystem/python-netdata"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation"
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.26,<1"
yarl = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
pytest = "^8"
pytest-httpx = ">0.15,<1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
